# mousir

./: CMakeLists.txt  Config.cmake.in  DEVLOG.md
mousir/: activator.hpp  apt_activator.hpp  apt_burster.hpp  apt_checkboxer.hpp  apt_poor_activator.hpp  apt_poor_finalizer.hpp  apt_poor_indicator.hpp  apt_poor_navigator.hpp  apt_practicer.hpp  apt_releasor.hpp  apt_rich_activator.hpp  apt_rich_finalizer.hpp  apt_rich_indicator.hpp  apt_rich_navigator.hpp  apt_rolodex.hpp  burster.hpp  checkboxer.hpp  configuration.hpp  correspondence.hpp  old.hpp  poor_activator.hpp  poor_finalizer.hpp  poor_indicator.hpp  poor_navigator.hpp  practicer.hpp  releasor.hpp  rich_activator.hpp  rich_finalizer.hpp  rich_indicator.hpp  rich_navigator.hpp  rolodex.hpp
mousir/cheesential/: decipher.hpp  execute.hpp  executor.hpp
tests/: tests.cpp
tests/general/: forward.test.hpp  initialization_of_standard_function.test.hpp  overload.test.hpp  value_category_conversion.test.hpp
tests/units/: activator.lvalue_reference.test.hpp  activator.ordinary.test.hpp  activator.rvalue_reference.test.hpp  activator.test.hpp  apt_burster.lvalue_reference.test.hpp  apt_burster.ordinary.test.hpp  apt_burster.rvalue_reference.test.hpp  apt_practicer.lvalue_reference.test.hpp  apt_practicer.ordinary.test.hpp  apt_releasor.rvalue_reference.test.hpp  practicer.lvalue_reference.test.hpp  practicer.ordinary.test.hpp  practicer.test.hpp  releasor.lvalue_reference.test.hpp  releasor.ordinary.test.hpp  releasor.rvalue_reference.test.hpp  releasor.test.hpp
tests/units/apt_activator.test.hpp/: apt_activator.lvalue_reference.test.hpp  apt_activator.ordinary.test.hpp  apt_activator.rvalue_reference.test.hpp
tests/units/apt_practicer.test.hpp/: apt_practicer.ordinary.test.hpp
(+36 files in other folders)
